samples/_failures_safe/1761426409_c7adf1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0d6b0d7.c: In function ‘main’:
./samples/SAFE/__tmp_f0d6b0d7.c:174:9: error: expected declaration or statement at end of input
  174 |         printf("Failed to read second matrix\n");
      |         ^~~~~~
./samples/SAFE/__tmp_f0d6b0d7.c:174:9: error: expected declaration or statement at end of input
